Adding  to speaking notes

--- a/December Meeting/presentation_notes.html
+++ b/December Meeting/presentation_notes.html
@@ -25,12 +25,12 @@ ul.contains-task-list { padding-left: 0; } ul ul.contains-task-list { padding-le
 <h2 id="sources">Sources</h2>
 <p>source:  <a href="https://docs.microsoft.com/en-us/powershell/module/microsoft.powershell.core/about/about_comment_based_help?view=powershell-5.1&amp;viewFallbackFrom=powershell-Microsoft.PowerShell.Core">https://docs.microsoft.com/en-us/powershell/module/microsoft.powershell.core/about/about_comment_based_help?view=powershell-5.1&amp;viewFallbackFrom=powershell-Microsoft.PowerShell.Core</a></p>
 <h2 id="where-to-use-comment-based-help-in-script">Where to use comment based help in script</h2>
-<p>-Begining of script file
--End of the script file</p>
+<p>-Begining of script file</p>
+<p>-End of the script file</p>
 <h2 id="where-to-use-comment-based-help-in-function">Where to use comment based help in function</h2>
-<p>-Beginning of function body
--End of function body
--Before function keyword</p>
+<p>-Beginning of function body</p>
+<p>-End of function body</p>
+<p>-Before function keyword</p>
 
     </body>
     </html>
